Fix shift factory time bugs, add holiday/meeting types, enable debugbar, and fix edit feature

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+
+# Prevent committing test credentials
+dev_testing_usernames.txt
+*test_credentials*
+*testing_usernames*
